objects/Prototype_Screen_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_VersionId__c</fullName>
        <label>File VersionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prototype_Configuration__c</fullName>
        <label>Prototype Configuration</label>
        <referenceTo>PrototypeConfiguration__c</referenceTo>
        <relationshipLabel>Prototype Screen Configurations</relationshipLabel>
        <relationshipName>Prototype_Screen_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sheight__c</fullName>
        <label>Screen Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>startFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>startFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>Prototype Screen Configuration</label>
    <nameField>
        <label>Prototype Screen Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prototype Screen Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>